--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,11 +65,12 @@
         android:layout_width="231dp"
         android:layout_height="31dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/textviewweb"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
