--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,6 @@
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="14dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
@@ -48,9 +47,7 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="#ACACAC"
-        app:layout_constraintEnd_toStartOf="@+id/txt_lname"
-        app:layout_constraintHorizontal_bias="0.96"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/Email"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
@@ -169,8 +166,9 @@
         android:id="@+id/txt_lname"
         android:layout_width="160dp"
         android:layout_height="48dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="36dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
@@ -182,8 +180,9 @@
         android:textColorHint="#ACACAC"
         app:layout_constraintBottom_toTopOf="@+id/Email"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txt_fname"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txt_forgot_password"
