--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -95,7 +95,7 @@
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text=" use other methods"
+        android:text="@string/textviewweb"
         android:textColor="@color/cardview_dark_background"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
