--- a/app/src/main/res/layout-sw600dp-land/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_register.xml
@@ -67,14 +67,14 @@
         android:id="@+id/imageView12"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="72dp"
         android:backgroundTintMode="add"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Google"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:srcCompat="@drawable/twitter" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/icontwitter" />
 
     <TextView
         android:id="@+id/txt_forgot_password"
