--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -206,7 +206,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/twitter" />
+        app:srcCompat="@drawable/icontwitter" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
