--- a/app/src/main/res/layout-sw320dp/activity_welcome.xml
+++ b/app/src/main/res/layout-sw320dp/activity_welcome.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/color1"
     tools:context=".Welcome">
+
 
     <ImageView
         android:id="@+id/imageView6"
@@ -102,3 +114,6 @@
         app:strokeColor="@color/color2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
+
