--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,9 @@
         <item name="colorControlNormal">@color/colorActive</item>
         <item name="colorControlActivated">@color/color2</item>
     </style>
+    
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/colorActive</item>
+        <item name="colorControlActivated">@color/color2</item>
+    </style>
 </resources>
