--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -14,11 +14,11 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="394dp"
-            android:layout_height="394dp"
-            android:layout_marginStart="-13dp"
-            android:layout_marginEnd="-13dp"
+            android:layout_width="330dp"
+            android:layout_height="330dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/rate3" />
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/text2_feedback"
-            android:textColor = "?android:textColorPrimary"
+            android:textColor="?android:textColorPrimary"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/text3_feedback"
-            android:textColor = "?android:textColorPrimary"
+            android:textColor="?android:textColorPrimary"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/text4_feedback"
-            android:textColor = "?android:textColorPrimary"
+            android:textColor="?android:textColorPrimary"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,9 +102,9 @@
             android:layout_height="170dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/linear_feedback"
+            android:gravity="start|top"
             android:hint="@string/feedback"
             android:inputType="textMultiLine"
-            android:gravity="start|top"
             android:paddingStart="10dp"
             android:paddingTop="15dp"
             android:paddingEnd="10dp"
@@ -115,8 +115,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView28" />
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
