--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -22,7 +22,6 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pic"
-
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/logophoto"
@@ -30,6 +29,7 @@
             />
 
         <TextView
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Name"
@@ -40,6 +40,7 @@
             />
 
         <TextView
+            android:id="@+id/user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
