--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -29,7 +29,7 @@
         android:layout_width="40dp"
         android:layout_height="30dp"
         android:layout_marginStart="200dp"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
 
     <TextView
         android:id="@+id/username"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="46dp"
         android:ellipsize="end"
@@ -50,6 +50,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/img_back2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toEndOf="@+id/img_prof2"
         app:layout_constraintTop_toTopOf="@id/img_back2" />
     <View
@@ -72,15 +73,6 @@
         app:layout_constraintBottom_toBottomOf="@id/viewback"
         app:layout_constraintTop_toBottomOf="@id/viewusers"/>
 
-    <ProgressBar
-        android:id="@+id/chat_progress"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:layout_constraintBottom_toBottomOf="@id/viewback"
-        app:layout_constraintEnd_toEndOf="@id/viewback"
-        app:layout_constraintStart_toStartOf="@id/viewback"
-        app:layout_constraintTop_toTopOf="@id/viewback"
-        android:indeterminateTint="@color/color5"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_back2"
